deployment/kubeflow/central-dashboard/traefik-basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kube-auth
  namespace: kubeflow
spec:
  basicAuth:
    secret: authsecret
    headerField: kubeflow-userid
